tests/errors/second_stage/entry_constant/entry_constant.am
.define myConst = 2
.entry myConst
